runs/2025-02-28-13-08-23/logs/CNViz/build-success.log
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://p3m.dev/cran/__linux__/noble/latest
Bioconductor version 3.20 (BiocManager 1.30.25), R 4.4.2 (2024-10-31)
Installing package(s) 'CNViz'
also installing the dependencies ‘cn.mops’, ‘CopyNumberPlots’

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/cn.mops_1.52.0.tar.gz'
Content type 'application/x-gzip' length 1054744 bytes (1.0 MB)
==================================================
downloaded 1.0 MB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/CopyNumberPlots_1.22.0.tar.gz'
Content type 'application/x-gzip' length 1857405 bytes (1.8 MB)
==================================================
downloaded 1.8 MB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/CNViz_1.14.0.tar.gz'
Content type 'application/x-gzip' length 119365 bytes (116 KB)
==================================================
downloaded 116 KB

* installing *source* package ‘cn.mops’ ...
** package ‘cn.mops’ successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C compiler: ‘gcc (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0’
using C++ compiler: ‘g++ (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0’
gcc -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c R_init_cnmops.c -o R_init_cnmops.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c cnmops.cpp -o cnmops.o
cnmops.cpp: In function ‘SEXPREC* cnmops(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP)’:
cnmops.cpp:18:17: error: ‘length’ was not declared in this scope
   18 |         int N = length(xS);
      |                 ^~~~~~
In file included from cnmops.cpp:8:
cnmops.cpp:42:32: error: ‘allocMatrix’ was not declared in this scope; did you mean ‘Rf_allocMatrix’?
   42 |         PROTECT(alpha_ik_RET = allocMatrix(REALSXP, n, N));
      |                                ^~~~~~~~~~~
/usr/local/lib/R/include/Rinternals.h:371:36: note: in definition of macro ‘PROTECT’
  371 | #define PROTECT(s)      Rf_protect(s)
      |                                    ^
cnmops.cpp:46:31: error: ‘allocVector’ was not declared in this scope; did you mean ‘Rf_allocVector’?
   46 |         PROTECT(alpha_i_RET = allocVector(REALSXP, n));
      |                               ^~~~~~~~~~~
/usr/local/lib/R/include/Rinternals.h:371:36: note: in definition of macro ‘PROTECT’
  371 | #define PROTECT(s)      Rf_protect(s)
      |                                    ^
cnmops.cpp:117:37: error: ‘mkChar’ was not declared in this scope
  117 |         SET_STRING_ELT(namesRET, 0, mkChar("alpha.ik"));
      |                                     ^~~~~~
cnmops.cpp:128:9: error: ‘setAttrib’ was not declared in this scope; did you mean ‘Rf_setAttrib’?
  128 |         setAttrib(RET, R_NamesSymbol, namesRET);
      |         ^~~~~~~~~
      |         Rf_setAttrib
make: *** [/usr/local/lib/R/etc/Makeconf:204: cnmops.o] Error 1
ERROR: compilation failed for package ‘cn.mops’
* removing ‘/mnt/library/cn.mops’
ERROR: dependency ‘cn.mops’ is not available for package ‘CopyNumberPlots’
* removing ‘/mnt/library/CopyNumberPlots’
ERROR: dependency ‘CopyNumberPlots’ is not available for package ‘CNViz’
* removing ‘/mnt/library/CNViz’

The downloaded source packages are in
	‘/tmp/RtmpT0JgyW/downloaded_packages’
Old packages: 'bslib', 'cli', 'curl', 'evaluate', 'httr2', 'jsonlite',
  'openssl', 'pillar', 'pkgbuild', 'processx', 'ps', 'purrr', 'R6', 'Rcpp',
  'rlang', 'sessioninfo', 'systemfonts', 'testthat', 'textshaping', 'tinytex',
  'xfun', 'zip', 'class', 'foreign', 'KernSmooth', 'MASS', 'Matrix', 'nlme',
  'nnet', 'rpart', 'spatial'
Warning messages:
1: In install.packages(...) :
  installation of package ‘cn.mops’ had non-zero exit status
2: In install.packages(...) :
  installation of package ‘CopyNumberPlots’ had non-zero exit status
3: In install.packages(...) :
  installation of package ‘CNViz’ had non-zero exit status
Error: unexpected 'else' in "  else"
Execution halted

real	1m11.518s
user	0m14.888s
sys	0m4.460s
